# linal_2020

./: CMakeLists.txt  vcpkg.json
graphics/: CMakeLists.txt
graphics/include/graphics/: camera.hpp  instance.hpp  model.hpp  renderer.hpp  scene.hpp  transform.hpp
graphics/include/graphics/io/: model_loader.hpp  obj_parser.hpp
graphics/include/graphics/primitives/: model3d.hpp
graphics/src/graphics/: camera.cpp  transform.cpp
graphics/src/graphics/io/: model_loader.cpp  obj_parser.cpp
graphics/src/graphics/primitives/: model3d.cpp
graphics/src/graphics/sdl2/: sdl2_renderer.cpp  sdl2_renderer.hpp
math/: CMakeLists.txt
math/include/math/: matrix.hpp  pi.hpp  utils.hpp  vector.hpp
math/test/: 000_catch_main.cpp  001_vector.cpp  002_matrix.cpp
space_invaders_3d/: CMakeLists.txt
space_invaders_3d/src/space_invaders_3d/: main.cpp
space_invaders_3d/src/space_invaders_3d/cameras/: first_person_camera.cpp  first_person_camera.hpp
space_invaders_3d/src/space_invaders_3d/game_objects/: bullet.cpp  bullet.hpp  game_object.hpp  space_ship.cpp  space_ship.hpp  target.cpp  target.hpp
space_invaders_3d/src/space_invaders_3d/models/: cube.cpp  cube.hpp  triangle.cpp  triangle.hpp
space_invaders_3d/src/space_invaders_3d/shared/: keys.hpp
